[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["Andrey Bogatyrev <t2way@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"


[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
